# Subdivnet

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  dependencies.json
cmake/: install-config.cmake  install-rules.cmake  subdivnet_dependencies.cmake  subdivnet_targets.cmake  variables.cmake
source/: conv.cpp  conv.h  main.cpp  preprocess.cpp  train_cls.cpp
source/maps/: geometry.h  maps.h  utils.h
source/subdivnet/: convert.h  dataset.h  deeplab.cpp  deeplab.h  mesh_ops.cpp  mesh_ops.h  mesh_tensor.cpp  mesh_tensor.h  network.cpp  network.h  parallel.cu  utils.h
